--- a/index.html
+++ b/index.html
@@ -18,21 +18,36 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Moov Money Agent App - Manage your agent activities.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="moov_money_agent_app">
+  <meta name="apple-mobile-web-app-title" content="Moov Money Agent App">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>moov_money_agent_app</title>
+  <title>Moov Money Agent App</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <div id="flutter_splash">
+    <img src="assets/logo.png" alt="App Logo">
+    <div class="loading-spinner"></div>
+  </div>
+  <script>
+    window.addEventListener('load', function () {
+      var splash = document.getElementById('flutter_splash');
+      if (splash) {
+        // Hide the splash screen after a short delay to ensure Flutter is ready
+        setTimeout(function() {
+          splash.classList.add('hidden');
+        }, 500); // Adjust delay as needed
+      }
+    });
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
