--- a/web/index.html
+++ b/web/index.html
@@ -31,23 +31,50 @@
 
   <title>Moov Money Agent App</title>
   <link rel="manifest" href="manifest.json">
+
+  <style>
+    #flutter_splash {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #005288; /* Couleur de fond Moov */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      transition: opacity 1s ease-out;
+    }
+
+    #flutter_splash img {
+      max-width: 80%;
+      max-height: 80%;
+      object-fit: contain;
+    }
+
+    #flutter_splash.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+  </style>
 </head>
 <body>
   <div id="flutter_splash">
     <img src="assets/logo.png" alt="App Logo">
-    <div class="loading-spinner"></div>
   </div>
   <script>
     window.addEventListener('load', function () {
       var splash = document.getElementById('flutter_splash');
       if (splash) {
-        // Hide the splash screen after a short delay to ensure Flutter is ready
+        // Hide the splash screen after a short delay
         setTimeout(function() {
           splash.classList.add('hidden');
-        }, 500); // Adjust delay as needed
+        }, 1000); // Délai pour la transition
       }
     });
   </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
+
